# Brand-Influencer_Recommend-system

./: .gitignore  README.md  brand_matching.py  brand_matching_ver0.2.py  gmf_model.pth  inference.py  mlp_model.pth  neumf_model.pth  pyproject.toml  real_time_rec_fast_api.py  requirements.txt  training.py
inference_modules/: DB_connection_for_inference.py  DB_connection_for_inference_for_test.py  Load_NecessaryThings_from_s3.py  Recommender.py
libraries/: db_connect.py
training_modules/: DB_connection.py  Data_preprocessing.py  NCF_model.py  Real_time_Recommender.py  Training_Recommender_Evaluation.py
