[project]
name = "recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "SOMMHEO",email = "hsm8506@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "boto3 (>=1.37.37,<2.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "torch (>=2.7.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
